docs: sync docs and governance to raw-Driver architecture
specs-2month/README/RULES/module-guides + agent rule files: tech stack 4.0.6, scaffold status flags, raw Neo4j Driver (no OGM/@Node/BaseNode/Neo4jConfig), correct VibeGraph-specs-2month paths, migration-runner reality, ApiResponse 204, manual mapping at driver boundary, DETACH-DELETE policy.