@@ -1,39 +1,53 @@
-# VibeGraph — Deployment Plan (2-Month Scope)
+# VibeGraph - Kế hoạch triển khai (Phạm vi 2 tháng)
 
 ## Mục tiêu
 
-Sau 8 tuần: `vibegraph.com` chạy public, AI tool kết nối MCP qua URL public, user paste GitHub URL → thấy graph.
+Đến cuối giai đoạn MVP, `vibegraph.com` phục vụ frontend qua HTTPS, proxy lưu lượng API/WebSocket/MCP đến backend Spring Boot, và có thể import một repo Java công khai trên GitHub vào Neo4j.
 
----
+## Các cổng giai đoạn
 
-## Stage gate
-
-| Tuần | Môi trường | URL | Trạng thái |
+| Tuần | Môi trường | URL | Yêu cầu |
 |---|---|---|---|
-| 2 | Dev | `dev.vibegraph.com` | Internal team test |
-| 6 | Staging | `staging.vibegraph.com` | Beta tester mời (3-5 người) |
-| 8 | Production | `vibegraph.com` | Public launch |
+| 2 | Local dev | `http://localhost:5173` hoặc Docker `http://localhost:3000` | Lát cắt dọc cục bộ hoạt động |
+| 6 | Staging | `staging.vibegraph.com` | Import GitHub, sơ đồ, kiểm thử nhanh MCP |
+| 8 | Production | `vibegraph.com` | Ra mắt bản demo công khai |
 
----
+`dev.vibegraph.com` là tùy chọn. Đừng để việc triển khai domain chặn Sprint 1.
 
-## Hạ tầng tối thiểu
+## Phát triển cục bộ
 
-### VPS — Hetzner CX22
-- 4GB RAM, 2 vCPU, 40GB SSD, 20TB traffic
-- Giá: ~$5-7/tháng
-- Location: Nuremberg (gần VN ping ~250ms) hoặc Helsinki
+Repo gốc đã có sẵn đủ môi trường để khởi động Neo4j:
 
-### Domain
-- `vibegraph.com` — Namecheap/Cloudflare Registrar ~$10-12/năm
-- DNS qua Cloudflare (free, có DDoS protection cơ bản)
+```powershell
+docker compose up -d neo4j
+docker compose ps neo4j
+```
 
-### SSL
-- Let's Encrypt qua certbot trong docker-compose
-- Auto-renew mỗi 60 ngày
+Chạy backend cục bộ:
 
----
+```powershell
+.\mvnw.cmd spring-boot:run
+```
 
-## Production docker-compose.yml
+Chạy frontend cục bộ:
+
+```powershell
+cd vibegraph-web
+npm install
+npm run dev
+```
+
+## Hạ tầng production
+
+- VPS: Hetzner CX22 hoặc tương đương, 4 GB RAM, 2 vCPU, tối thiểu 40 GB SSD.
+- Domain: `vibegraph.com`.
+- DNS: Cloudflare hoặc tương đương.
+- SSL: Let's Encrypt qua certbot.
+- Cổng công khai: chỉ 22, 80, 443.
+
+## Mẫu Production Docker Compose
+
+Backend build từ thư mục gốc của repo, không phải `./vibegraph-server`.
 
 ```yaml
 services:
@@ -51,20 +65,24 @@ services:
     networks: [internal]
 
   backend:
-    build: ./vibegraph-server
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: unless-stopped
     depends_on: [neo4j]
     environment:
       SPRING_PROFILES_ACTIVE: prod
-      SPRING_NEO4J_URI: bolt://neo4j:7687
-      SPRING_NEO4J_AUTHENTICATION_USERNAME: neo4j
-      SPRING_NEO4J_AUTHENTICATION_PASSWORD: ${NEO4J_PASSWORD}
-      VIBEGRAPH_GITHUB_TOKEN: ${GITHUB_TOKEN}
-      JAVA_TOOL_OPTIONS: "-Xmx1g -XX:+UseZGC"
+      NEO4J_URI: bolt://neo4j:7687
+      NEO4J_USERNAME: neo4j
+      NEO4J_PASSWORD: ${NEO4J_PASSWORD}
+      GITHUB_TOKEN: ${GITHUB_TOKEN}
+      JAVA_TOOL_OPTIONS: "-Xmx1g"
     networks: [internal]
 
   frontend:
-    build: ./vibegraph-web
+    build:
+      context: ./vibegraph-web
+      dockerfile: Dockerfile
     restart: unless-stopped
     networks: [internal]
 
@@ -95,7 +113,7 @@ networks:
   web:
 ```
 
-## nginx.conf (rút gọn)
+## Mẫu nginx
 
 ```nginx
 server {
@@ -111,111 +129,89 @@ server {
     ssl_certificate     /etc/letsencrypt/live/vibegraph.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/vibegraph.com/privkey.pem;
 
-    # Frontend SPA
     location / {
         proxy_pass http://frontend:80;
     }
 
-    # Backend API
     location /api/ {
         proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    # WebSocket
-    location /ws/ {
+    location /ws/graph-updates {
         proxy_pass http://backend:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+        proxy_read_timeout 3600s;
     }
 
-    # MCP endpoint
     location /mcp {
         proxy_pass http://backend:8080;
-        proxy_buffering off;            # Streamable HTTP cần unbuffered
+        proxy_buffering off;
         proxy_read_timeout 3600s;
+    }
+
+    location /actuator/health {
+        proxy_pass http://backend:8080;
     }
 }
 ```
 
----
-
-## Lệnh deploy production
+## Thiết lập production lần đầu
 
 ```bash
-# Lần đầu setup VPS
 ssh root@vibegraph.com
 apt update && apt install -y docker.io docker-compose-plugin git
 git clone https://github.com/yourorg/vibegraph.git /opt/vibegraph
 cd /opt/vibegraph
-cp .env.example .env && vi .env    # set NEO4J_PASSWORD, GITHUB_TOKEN
+cp .env.example .env
+# Set strong NEO4J_PASSWORD and GITHUB_TOKEN in .env
 
-# Lần đầu lấy SSL cert
 docker compose up -d nginx
 docker compose run --rm certbot certonly --webroot \
   -w /var/www/certbot -d vibegraph.com -m admin@vibegraph.com --agree-tos
 
-# Chạy full stack
-docker compose up -d
-
-# Update sau khi push code mới
-git pull && docker compose up -d --build
+docker compose up -d --build
 ```
 
----
+## Lệnh cập nhật
 
-## CI/CD — GitHub Actions
-
-```yaml
-# .github/workflows/deploy.yml
-name: Deploy
-on:
-  push:
-    branches: [main]
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: appleboy/ssh-action@v1
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: deploy
-          key: ${{ secrets.VPS_SSH_KEY }}
-          script: |
-            cd /opt/vibegraph
-            git pull
-            docker compose up -d --build
-            docker system prune -f
+```bash
+cd /opt/vibegraph
+git pull
+docker compose up -d --build
+docker system prune -f
 ```
 
----
+## Mục tiêu CI/CD
 
-## Monitoring (đơn giản, miễn phí)
+GitHub Actions cần chạy trước khi deploy:
 
-- **Uptime:** UptimeRobot (free, ping `/actuator/health` mỗi 5 phút)
-- **Logs:** `docker compose logs -f` ssh xem trực tiếp
-- **Metrics:** Spring Boot Actuator `/actuator/metrics` (defer Grafana/Prometheus sau 2 tháng)
+- Backend unit tests: `./mvnw test`
+- Backend full verification/CI, including `*IT` integration tests via Failsafe: `./mvnw verify`
+- Frontend: `cd vibegraph-web && npm ci && npm run lint && npm run type-check && npm run test:unit -- --run`
+- Tùy chọn deploy qua SSH sau khi `main` vượt qua CI.
 
----
+## Giám sát
 
-## Security checklist
+- UptimeRobot kiểm tra `https://vibegraph.com/actuator/health`.
+- Log qua `docker compose logs -f backend frontend nginx`.
+- Số liệu thông qua Spring Boot Actuator. Prometheus/Grafana là phần sau MVP.
 
-- [ ] `NEO4J_PASSWORD` random 32-char
-- [ ] Neo4j không expose port ra ngoài (chỉ internal network)
-- [ ] Backend không expose port 8080 ra ngoài (qua nginx)
-- [ ] Rate limit endpoint `/api/projects/import-github` (max 5 req/min/IP)
-- [ ] Validate GitHub URL pattern, reject non-github.com
-- [ ] CORS chỉ allow `vibegraph.com`
-- [ ] Firewall: chỉ mở 80, 443, 22
+## Checklist bảo mật
 
----
+- [ ] `NEO4J_PASSWORD` ngẫu nhiên và mạnh.
+- [ ] Các cổng Neo4j không công khai trong production.
+- [ ] Cổng backend 8080 không công khai trong production.
+- [ ] `/api/projects/import-github` được giới hạn tần suất (rate-limit).
+- [ ] Việc xác thực GitHub URL từ chối các host không phải GitHub.
+- [ ] CORS chỉ cho phép origin production trong prod.
+- [ ] Firewall chỉ mở 22, 80, và 443.
+- [ ] Endpoint MCP có quyết định về auth/rate-limit trước khi ra mắt công khai.
 
-## MCP integration sau deploy
-
-User config trong Cursor/Claude Code:
+## Cấu hình MCP sau khi deploy
 
 ```json
 {
@@ -228,22 +224,25 @@ User config trong Cursor/Claude Code:
 }
 ```
 
-(Bản local: thay `https://vibegraph.com` thành `http://localhost:8080`.)
+Phiên bản cục bộ:
 
----
+```json
+{
+  "mcpServers": {
+    "vibegraph": {
+      "url": "http://localhost:8080/mcp",
+      "transport": "streamable-http"
+    }
+  }
+}
+```
 
-## Cost estimate
+## Ước tính chi phí
 
-| Item | Monthly |
+| Hạng mục | Hàng tháng |
 |---|---|
-| Hetzner CX22 VPS | $7 |
-| Domain (amortized) | $1 |
+| VPS | ~$7 |
+| Domain phân bổ | ~$1 |
 | Cloudflare DNS | $0 |
 | Let's Encrypt SSL | $0 |
-| Email transactional (chưa cần) | $0 |
-| **Total** | **~$8/tháng** |
-
-Khi có user thật + auth + Stripe (post-2-month) cộng thêm:
-- Postgres managed (Supabase free tier): $0 → $25/mo khi scale
-- Stripe fee: 2.9% + $0.30 mỗi transaction
-- Resend email: $0 (free tier 3k/mo)
+| **Tổng** | **~$8/tháng** |
